<resources>
    <string name="app_name">Statiosis</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_second_name">enter your second name</string>
    <string name="enter_your_username">enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="submit">submit</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
